[tool.poetry]
name = "sqlalchemie"
version = "0.1.0"
description = ""
authors = ["Alex <ivanovivan159753@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.2"
SQLAlchemy = "^1.2.16"
psycopg2-binary = "^2.9.3"
gino = "^1.0.1"

[tool.poetry.dev-dependencies]
pylint = "^2.14.3"
pytest-asyncio = "^0.19.0"
asyncio = "^3.4.3"
pytest-dictsdiff = "^0.5.8"
pytest-lazy-fixture = "^0.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
